--- a/compose.yaml
+++ b/compose.yaml
@@ -19,31 +19,31 @@ services:
       timeout: 5s
       retries: 5
 
-  # app:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: examen-app
-  #   restart: unless-stopped
-  #   ports:
-  #     - "${PORT:-3000}:${PORT:-3000}"
-  #   environment:
-  #     NODE_ENV: ${NODE_ENV:-development}
-  #     PORT: ${PORT:-3000}
-  #     DB_HOST: ${DB_HOST:-db}
-  #     DB_PORT: ${DB_PORT:-5432}
-  #     DB_USERNAME: ${DB_USERNAME:-postgres}
-  #     DB_PASSWORD: ${DB_PASSWORD:-postgres}
-  #     DB_DATABASE: ${DB_DATABASE:-watchlist}
-  #   volumes:
-  #     - .:/usr/src/app
-  #     - /usr/src/app/node_modules
-  #   networks:
-  #     - examen-network
-  #   depends_on:
-  #     db:
-  #       condition: service_healthy
-  #   command: npm run start:dev
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: examen-app
+    restart: unless-stopped
+    ports:
+      - "${PORT:-3000}:${PORT:-3000}"
+    environment:
+      NODE_ENV: ${NODE_ENV:-development}
+      PORT: ${PORT:-3000}
+      DB_HOST: ${DB_HOST:-db}
+      DB_PORT: ${DB_PORT:-5432}
+      DB_USERNAME: ${DB_USERNAME:-postgres}
+      DB_PASSWORD: ${DB_PASSWORD:-postgres}
+      DB_DATABASE: ${DB_DATABASE:-watchlist}
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    networks:
+      - examen-network
+    depends_on:
+      db:
+        condition: service_healthy
+    command: sh -c "npm install && npm run start:dev"
 
 volumes:
   postgres_data:
